get docker compose and sinatra running when api app is in root directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ elastic:
   volumes:
     - docker_volumes/elasticsearch_data:/usr/local/elasticsearch/data
 api:
-  build: ./api
-  command: bundle exec rackup -p 4567 -b '0.0.0.0'
+  build: .
+  command: bundle exec rackup -p 4567 -o 0.0.0.0
   volumes:
     - .:/api
   ports:
