update dockerfile and implement collection json hypermedia and api endpoints

--- a/api/Gemfile
+++ b/api/Gemfile
@@ -9,3 +9,4 @@ gem 'faraday', '0.8.9' # requirement for stretcher
 gem 'stretcher'
 gem 'activesupport', '=4.0.1' # remote_table currently does not support 4.2.0
 gem 'remote_table'
+gem 'collection-json'
