change deploy.sh to start.sh, update readme, add some logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ elastic:
     - docker_volumes/elasticsearch_data:/usr/local/elasticsearch/data
 api:
   build: ./api
-  command: bash ./deploy/deploy.sh
+  command: bash ./deploy/start.sh
   volumes:
     - api:/api
   ports:
