--- a/api/Gemfile
+++ b/api/Gemfile
@@ -10,3 +10,4 @@ gem 'stretcher'
 gem 'activesupport', '=4.0.1' # remote_table currently does not support 4.2.0
 gem 'remote_table'
 gem 'collection-json'
+gem 'rack-cors'
