use relative mount point over named volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ api:
   build: ./api
   command: bash ./deploy/start.sh
   volumes:
-    - api:/api
+    - ./api:/api
   ports:
     - "4567:4567"
   links:
